# TheWalkingPet

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_fcm_token.py  003_update_embedding_dim.py  004_add_pet_aggregate_embedding.py  005_update_embedding_dim_1024.py  006_add_unique_match_pair.py
mobile/: pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/lib/: main.dart
mobile/lib/core/api/: api_client.dart  auth_api.dart  google_auth.dart  lost_api.dart  matches_api.dart  pets_api.dart  sightings_api.dart
mobile/lib/core/notifications/: fcm_service.dart
mobile/lib/features/auth/providers/: auth_provider.dart
mobile/lib/features/auth/screens/: home_screen.dart  login_screen.dart  register_screen.dart
mobile/lib/features/lost/providers/: lost_provider.dart
mobile/lib/features/lost/screens/: declare_lost_screen.dart  lost_declarations_screen.dart
mobile/lib/features/matches/providers/: matches_provider.dart
mobile/test/: widget_test.dart
scripts/: check_similarity.py  generate_icon.py  reembed_all.py  seed_db.py
src/: config.py  dependencies.py  main.py
src/api/v1/: auth.py  lost.py  matches.py  pets.py  router.py  sightings.py
src/db/: models.py  session.py
src/ml/: detector.py  embedder.py
src/ml/training/: augmentations.py  dataset.py  evaluate.py  train.py
src/schemas/: lost.py  match.py  pet.py  sighting.py  user.py
src/services/: auth_service.py  lost_service.py  matching_service.py  notification_service.py  pet_service.py  radius_expansion.py  sighting_service.py
src/storage/: image_store.py
src/utils/: geo.py  security.py
tests/: test_auth.py  test_geo.py  test_triplet_net.py
(+7 files in other folders)
